[package]
name = "perftacho"
version = "0.4.0"
authors = ["Markus Reith <mreith@gmx.net>"]
edition = "2018"
license = "Apache-2.0"
description = "Tool for measuring performance of binaries"
readme = "../README.md"
homepage = "https://github.com/qrider71/tacho"
repository = "https://github.com/qrider71/tacho"
keywords = ["utility", "performance", "testing"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.3"
regex = "1"
